css/screens/chat.css
#chat-screen {
  background-color: #abc1d1;
  height: 1100vh;
}

#chat-screen .status-bar {
  z-index: 1;
}

#chat-screen .status-bar,
#chat-screen .alt-header {
  position: fixed;
  top: 0;
  background-color: #abc1d1;
  width: 100%;
  box-sizing: border-box;
}


.main-chat {
  margin-top: 140px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.chat-timestamp {
  color: white;
  background-color: #92a4b2;
  padding: 15px;
  font-size: 14px;
  border-radius: 25px;
  margin-bottom: 25px;
}

.message-row {
  width: 100%;
  display: flex;
  margin-bottom: 25px;
}

.message-row img {
  width: 50px;
  height: 50px;
  border-radius: 40%;
  margin-right: 10px;
}

.message__author {
  margin-bottom: 5px;
  display: block;
}

.message__info {
  display: flex;
  align-items: end;
}

.message__bubble {
  background-color: white;
  border-radius: 15px;
  border-top-left-radius: 0;
  font-size: 18px;
  font-weight: 600;
  padding: 13px;
  margin-right: 5px;
}

.message__author,
.message__time {
  opacity: 0.8;
  font-size: 13px;
}

.message-row--own {
  justify-content: flex-end;
}

.message-row--own .message__info{
  flex-direction: row-reverse;
}

.message-row--own .message__bubble {
  background-color: var(--yellow);
  border-top-left-radius: 15px;
  border-top-right-radius: 0;
  margin-right: 0;
  margin-left: 5px;
}

